[gd_scene load_steps=19 format=2]

[ext_resource path="res://Adventurer/adventurer-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Health Bar Asset Pack 2 by Adwit Rahman/pngfind.com-health-bar-png-1091472-1.png.png" type="Texture" id=3]
[ext_resource path="res://Health Bar Asset Pack 2 by Adwit Rahman/pngfind.com-health-bar-png-1091472.png" type="Texture" id=4]
[ext_resource path="res://Sound/Sound Effects/248037__sophiehall3535__pick-up-keys-1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/Sound Effects/458867__raclure__damage-sound-effect.mp3" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=15]
radius = 7.5
height = 8.66666

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 2.875, 1.125 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.50002, 14.1667 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15.6667, 3.16667 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 2.66667, 10.9583 )

[sub_resource type="Animation" id=10]
resource_name = "AirAttack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 55, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=13]
resource_name = "Damage"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "Sword Attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AttackArea/AttackBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackBox2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 3
script = ExtResource( 2 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="KeyPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 7
vframes = 11
frame = 15

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.125, 7.875 )
shape = SubResource( 16 )

[node name="AttackArea" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="AttackBox" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 16.5, 3.43753 )
shape = SubResource( 8 )

[node name="Position2D" type="Position2D" parent="AttackArea/AttackBox"]

[node name="AttackBox2" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -3.66667, 15 )
shape = SubResource( 11 )

[node name="BackHit" type="Area2D" parent="."]
light_mask = 2
scale = Vector2( 0.5, 0.5 )

[node name="BackCollision" type="CollisionShape2D" parent="BackHit"]
light_mask = 2
position = Vector2( -8.66667, 0.708333 )
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AirAttack = SubResource( 10 )
anims/Damage = SubResource( 13 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Run = SubResource( 4 )
"anims/Sword Attack" = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 29, 3.33333 )
scale = Vector2( 0.5, 0.5 )

[node name="Position2D2" type="Position2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="SwordPosition" type="Position2D" parent="."]
position = Vector2( -17.3333, 3.33333 )
scale = Vector2( 0.5, 0.5 )

[node name="BackHitPosition" type="Position2D" parent="."]
position = Vector2( 20, 3.333 )
scale = Vector2( 0.5, 0.5 )

[node name="Iframe" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -6.75
margin_top = -10.75
margin_right = 350.25
margin_bottom = 66.25
rect_scale = Vector2( 0.04, 0.04 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = 0
limit_top = 0
limit_right = 1536
limit_bottom = 900

[node name="Death Counter" type="Node2D" parent="."]
scale = Vector2( 0.25, 0.25 )

[node name="UI" type="CanvasLayer" parent="Death Counter"]

[node name="Control" type="Control" parent="Death Counter/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="RichTextLabel" parent="Death Counter/UI/Control"]
margin_left = 456.0
margin_top = 23.0
margin_right = 496.0
margin_bottom = 63.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Death Counter/UI/Control"]
margin_left = 469.0
margin_top = 23.0
margin_right = 509.0
margin_bottom = 63.0
text = "/ 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Death Counter/UI/Control"]
margin_left = 416.0
margin_top = 23.0
margin_right = 465.0
margin_bottom = 37.0
text = "Keys:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="BackHit" to="." method="_on_BackHit_area_entered"]
[connection signal="timeout" from="Iframe" to="." method="_on_Iframe_timeout"]
